Add some refences, finished theoretical task, restructured document

--- a/PET/Protokoll/PET_Protokoll_literatur.tex
+++ b/PET/Protokoll/PET_Protokoll_literatur.tex
@@ -1,1 +1,7 @@
 \section{Literatur}
+
+\begin{thebibliography}{99}
+\bibitem [01] {Ramp} Y.Wei; G.Wang: \textit{An Intuitive Discussion on the Ideal Ramp Filter in Computed Tomography}. Iowa, 02/2004 
+\bibitem [02] {PA} IKTP TU Dresden : \textit{PET - Positronen-Emissions-Tomographie}
+
+\end{thebibliography}
